/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto3";

package pulsar.service.schema;
option java_package = "org.apache.pulsar.common.schema.grpc";
option optimize_for = SPEED;
option java_multiple_files=true;

message GrpcSchemaVersion {
  bytes schemaVersion = 1;
}

message VersionedSchemaResponse {
  bytes data = 1;
  GrpcSchemaVersion version = 2;
}

message GetAllVersionSchemaResponse {
  repeated VersionedSchemaResponse schemas = 1;
}

message PutSchemaRequest {
  string key = 1;
  bytes value = 2;
  bytes hash = 3;
}

message GetVersionSchemaRequest {
  string key = 1;
  GrpcSchemaVersion version = 2;
}

message GetAllVersionSchemaRequest {
  string key = 1;
}

message DeleteSchemaRequest {
  string key = 1;
  bool force = 2;
}

service GrpcSchemaStorageService {
  rpc Put(PutSchemaRequest) returns (GrpcSchemaVersion) {}
  rpc Get(GetVersionSchemaRequest) returns (VersionedSchemaResponse) {}
  rpc GetAll(GetAllVersionSchemaRequest) returns (GetAllVersionSchemaResponse) {}
  rpc Delete(DeleteSchemaRequest) returns (GrpcSchemaVersion) {}
}